--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -2,6 +2,19 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.container {
+  width: 80%;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 a {
   text-decoration: none;
+}
+
+h1, h2 {
+  text-transform: uppercase;
 }
