--- a/public/css/app.css
+++ b/public/css/app.css
@@ -437,6 +437,34 @@ header ul li:hover {
   background-color: #B3E5FC;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  background-image: url("/images/fondo-pag-speciali.jpg");
+}
+
+main .container {
+  margin: 30px 0;
+}
+
+.card-container-long,
+.card-container-short,
+.card-container-xshort {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.card {
+  width: 32%;
+  margin: 5px;
+}
+
+.card img {
+  width: 100%;
+}
+
 footer {
   display: flex;
   justify-content: center;
