--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -27,7 +27,7 @@ header {
         display: block;
       }
       &:hover {
-        background-color: #B3E5FC;
+        background-color: $hoverBackgroundColor;
       }
     }
   }
