--- a/resources/sass/partials/_pages.scss
+++ b/resources/sass/partials/_pages.scss
@@ -17,11 +17,38 @@ main {
   justify-content: flex-start;
 }
 
+.title-section {
+  color: $sectionsColor;
+}
+
 .card {
   width: 32%;
   margin: $spacing / 2;
+  position: relative;
 
   img{
     width: 100%;
+  }
+
+  .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+
+    a {
+      font-size: 20px;
+      color: $sectionsColor;
+      font-weight: 700;
+    }
+  }
+  &:hover .overlay {
+    background-color: $hoverBackgroundColor;
+    opacity: 0.5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
