creazione pagina dettaglio prodotto

--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -3,3 +3,4 @@ $headerColor: #000;
 $footerColor: #848D9B;
 $hoverBackgroundColor: #B3E5FC;
 $sectionsColor: #002D73;
+$mainBackgroundColor: #B7DAE5;
