--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,13 +1,10 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
 /* Document
    ========================================================================== */
-
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-
 html {
   line-height: 1.15;
   /* 1 */
@@ -17,11 +14,9 @@ html {
 
 /* Sections
    ========================================================================== */
-
 /**
  * Remove the margin in all browsers.
  */
-
 body {
   margin: 0;
 }
@@ -29,7 +24,6 @@ body {
 /**
  * Render the `main` element consistently in IE.
  */
-
 main {
   display: block;
 }
@@ -38,7 +32,6 @@ main {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
-
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
@@ -46,12 +39,10 @@ h1 {
 
 /* Grouping content
    ========================================================================== */
-
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
-
 hr {
   box-sizing: content-box;
   /* 1 */
@@ -65,7 +56,6 @@ hr {
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-
 pre {
   font-family: monospace, monospace;
   /* 1 */
@@ -75,11 +65,9 @@ pre {
 
 /* Text-level semantics
    ========================================================================== */
-
 /**
  * Remove the gray background on active links in IE 10.
  */
-
 a {
   background-color: transparent;
 }
@@ -88,7 +76,6 @@ a {
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
-
 abbr[title] {
   border-bottom: none;
   /* 1 */
@@ -102,7 +89,6 @@ abbr[title] {
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
-
 b,
 strong {
   font-weight: bolder;
@@ -112,7 +98,6 @@ strong {
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-
 code,
 kbd,
 samp {
@@ -125,7 +110,6 @@ samp {
 /**
  * Add the correct font size in all browsers.
  */
-
 small {
   font-size: 80%;
 }
@@ -134,7 +118,6 @@ small {
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
-
 sub,
 sup {
   font-size: 75%;
@@ -153,23 +136,19 @@ sup {
 
 /* Embedded content
    ========================================================================== */
-
 /**
  * Remove the border on images inside links in IE 10.
  */
-
 img {
   border-style: none;
 }
 
 /* Forms
    ========================================================================== */
-
 /**
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
-
 button,
 input,
 optgroup,
@@ -189,7 +168,6 @@ textarea {
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */
-
 button,
 input {
   /* 1 */
@@ -200,7 +178,6 @@ input {
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */
-
 button,
 select {
   /* 1 */
@@ -210,7 +187,6 @@ select {
 /**
  * Correct the inability to style clickable types in iOS and Safari.
  */
-
 button,
 [type=button],
 [type=reset],
@@ -221,7 +197,6 @@ button,
 /**
  * Remove the inner border and padding in Firefox.
  */
-
 button::-moz-focus-inner,
 [type=button]::-moz-focus-inner,
 [type=reset]::-moz-focus-inner,
@@ -233,7 +208,6 @@ button::-moz-focus-inner,
 /**
  * Restore the focus styles unset by the previous rule.
  */
-
 button:-moz-focusring,
 [type=button]:-moz-focusring,
 [type=reset]:-moz-focusring,
@@ -244,7 +218,6 @@ button:-moz-focusring,
 /**
  * Correct the padding in Firefox.
  */
-
 fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
@@ -255,7 +228,6 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers.
  */
-
 legend {
   box-sizing: border-box;
   /* 1 */
@@ -274,7 +246,6 @@ legend {
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
-
 progress {
   vertical-align: baseline;
 }
@@ -282,7 +253,6 @@ progress {
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
-
 textarea {
   overflow: auto;
 }
@@ -291,7 +261,6 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-
 [type=checkbox],
 [type=radio] {
   box-sizing: border-box;
@@ -303,7 +272,6 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-
 [type=number]::-webkit-inner-spin-button,
 [type=number]::-webkit-outer-spin-button {
   height: auto;
@@ -313,7 +281,6 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-
 [type=search] {
   -webkit-appearance: textfield;
   /* 1 */
@@ -324,7 +291,6 @@ textarea {
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-
 [type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
@@ -333,7 +299,6 @@ textarea {
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
-
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   /* 1 */
@@ -343,11 +308,9 @@ textarea {
 
 /* Interactive
    ========================================================================== */
-
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
-
 details {
   display: block;
 }
@@ -355,18 +318,15 @@ details {
 /*
  * Add the correct display in all browsers.
  */
-
 summary {
   display: list-item;
 }
 
 /* Misc
    ========================================================================== */
-
 /**
  * Add the correct display in IE 10+.
  */
-
 template {
   display: none;
 }
@@ -374,17 +334,12 @@ template {
 /**
  * Add the correct display in IE 10.
  */
-
 [hidden] {
   display: none;
 }
 
 body {
   font-family: "Roboto", sans-serif;
-}
-
-.container {
-  width: 80%;
 }
 
 ul {
@@ -396,33 +351,28 @@ a {
   text-decoration: none;
 }
 
-h1,
-h2 {
+h1, h2 {
   text-transform: uppercase;
 }
 
 header {
-  width: 100vw;
+  max-width: 100vw;
   height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
 }
-
 header .logo {
   margin-bottom: 20px;
 }
-
 header ul {
   margin-bottom: 0;
 }
-
 header ul li {
   display: inline-block;
   padding: 5px;
 }
-
 header ul li a {
   width: 100%;
   height: 100%;
@@ -432,19 +382,24 @@ header ul li a {
   font-size: 30px;
   display: block;
 }
-
 header ul li:hover {
   background-color: #B3E5FC;
 }
 
 main {
+  max-width: 100vw;
   display: flex;
   justify-content: center;
-  background-image: url("/images/fondo-pag-speciali.jpg");
+}
+main .container {
+  max-width: 80%;
+  margin: 30px 0;
 }
 
-main .container {
-  margin: 30px 0;
+.products {
+  background-image: url("/images/fondo-pag-speciali.jpg");
+  display: flex;
+  justify-content: center;
 }
 
 .card-container-long,
@@ -465,11 +420,9 @@ main .container {
   margin: 5px;
   position: relative;
 }
-
 .card img {
   width: 100%;
 }
-
 .card .overlay {
   width: 100%;
   height: 100%;
@@ -478,19 +431,29 @@ main .container {
   left: 0;
   display: none;
 }
-
 .card .overlay a {
   font-size: 20px;
   color: #002D73;
   font-weight: 700;
 }
-
 .card:hover .overlay {
   background-color: #B3E5FC;
   opacity: 0.5;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.products,
+.product-details,
+.product-image {
+  max-width: 100%;
+}
+.products img,
+.product-details img,
+.product-image img {
+  max-width: 100%;
+  display: block;
 }
 
 footer {
@@ -502,16 +465,13 @@ footer {
   background-repeat: no-repeat;
   background-position: bottom;
 }
-
 footer .container {
   display: flex;
   padding-bottom: 100px;
 }
-
 footer .container .logo-info {
   width: 30%;
 }
-
 footer .container .footer-nav {
   width: 60%;
   display: flex;
@@ -519,21 +479,16 @@ footer .container .footer-nav {
   flex-wrap: wrap;
   margin-left: 100px;
 }
-
 footer .container .footer-nav ul {
   width: 50%;
   margin: 0;
 }
-
 footer .container .footer-nav ul li {
   margin: 12px 0;
 }
-
 footer .container .footer-nav ul li h2 {
   margin-top: 0;
 }
-
 footer .container .footer-nav ul li a {
   color: #848D9B;
 }
-
