--- a/resources/sass/partials/_pages.scss
+++ b/resources/sass/partials/_pages.scss
@@ -1,12 +1,20 @@
 main {
+  max-width: 100vw;
   display: flex;
   justify-content: center;
-  background-image: url('/images/fondo-pag-speciali.jpg');
 
   .container {
+    max-width: 80%;
     margin: $spacing * 3 0;
   }
 }
+
+.products {
+  background-image: url('/images/fondo-pag-speciali.jpg');
+  display: flex;
+  justify-content: center;
+}
+
 
 .card-container-long,
 .card-container-short,
@@ -50,5 +58,15 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+}
+
+.products,
+.product-details,
+.product-image {
+  max-width: 100%;
+  img {
+    max-width: 100%;
+    display: block;
   }
 }
